--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="#">🇬🇭PRINCE</a>
         </div>
         <ul class="nav2">
-          <li><a href="myhome.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li><a href="myabout.html">ABOUT ME</a></li>
           <li><a href="mycontact.html">CONTACT</a></li>
           <li><a href="#Port">MY PORTFOLIO</a></li>
