--- a/mycontact.html
+++ b/mycontact.html
@@ -24,33 +24,23 @@
     </header>
     <h2 id="Contact">GET IN TOUCH</h2>
     <div class="par">
-      <form id="contactForm" action="/send-email" method="POST">
+      <form id="contactForm" onsubmit="validateForm(event)">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required />
+        <input type="text" id="name" name="name" />
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
+        <input type="email" id="email" name="email" />
 
         <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
+        <textarea id="message" name="message" rows="5"></textarea>
 
-        <button type="button" id="submitForm">Send Message</button>
+        <button type="submit">Submit</button>
       </form>
     </div>
     <footer>
       <p>&copy; Prince Anane</p>
     </footer>
-    <script>
-      function validateForm() {
-        var name = document.getElementById("name").value;
-        var email = document.getElementById("email").value;
-        var message = document.getElementById("message").value;
-
-        if (!name || !email || !message) {
-          alert("Please fill out all fields.");
-          return false;
-        }
-      }
-    </script>
+    <script src="scripts.js"></script>
   </body>
 </html>
+
